Add GooglePlayConnection and GooglePlayGameParser tests