@@ -30,6 +30,11 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
+}
+
 dependencies {
     //Spring
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -47,6 +52,9 @@ dependencies {
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'org.jsoup:jsoup:1.12.1'
 
-    //Test
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //JUnit
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
 }
